// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have blank in list 1`] = `
"<TodoList>
  <div>
    <form onSubmit={[Function: handleSubmit]}>
      todo: 
      <input />
    </form>
    <ul>
      <li />
      <li />
    </ul>
  </div>
</TodoList>"
`;

exports[`should have list 1`] = `
"<TodoList>
  <div>
    <form onSubmit={[Function: handleSubmit]}>
      todo: 
      <input />
    </form>
    <ul>
      <li />
    </ul>
  </div>
</TodoList>"
`;

exports[`should have lists 1`] = `
"<TodoList>
  <div>
    <form onSubmit={[Function: handleSubmit]}>
      todo: 
      <input />
    </form>
    <ul>
      <li />
      <li />
    </ul>
  </div>
</TodoList>"
`;

exports[`value should change 1`] = `
"<TodoList>
  <div>
    <form onSubmit={[Function: handleSubmit]}>
      todo: 
      <input />
    </form>
    <ul />
  </div>
</TodoList>"
`;
